--- a/html/test1-false.html
+++ b/html/test1-false.html
@@ -24,7 +24,7 @@
           <h5 class="card-title" style="font-style: italic">For training</h5>
           <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
           <p class="card-text">
-            <img src="image/Task1-traing1-result.png" class="img-fluid" style="border: 2px solid #555;">
+            <img src="image/Task1-training1-result.png" class="img-fluid" style="border: 2px solid #555; width:60%; height: 60%;">
           </p>
           <p class="card-text" style="margin-top: 30px;">
 
