--- a/html/test1-true-2.html
+++ b/html/test1-true-2.html
@@ -29,7 +29,7 @@
           <p class="card-text" style="margin-top: 30px;">
 
           </p>
-          <a href="test1-notice.html" class="btn btn-primary">Start Test</a>
+          <a href="test1-training3.html" class="btn btn-primary">Try it again</a>
         </div>
         <div class="card-footer text-muted">
           Note:
