--- a/html/test4-result2.html
+++ b/html/test4-result2.html
@@ -30,7 +30,7 @@
             <canvas id="myChart"></canvas>
           </div>
 
-          <a href="test4-notice.html" class="btn btn-primary">Start Test</a>
+          <a href="test4-training3.html" class="btn btn-primary">Try it again</a>
         </div>
 
         <div class="card-footer text-muted">
