--- a/html/test1-l2.html
+++ b/html/test1-l2.html
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Choose one point</h5>
                     <p class="card-text">
-                        Which outlier is further to the center of the cluster?(Click the point you decide to select)
+                        Which outlier is further to the center of the cluster?(Click on the point you decide to select)
                     </p>
                     <p class="card-text">
                     <div class="chart-container" id="chartContainer" style="position: relative; height:400px; width:400px">
@@ -77,7 +77,7 @@
 
     console.log(dataN)
 
-    const ratioN = 2;
+    const ratioN = 4;
 
     // config
     const config = {
