--- a/html/test1-training.html
+++ b/html/test1-training.html
@@ -24,7 +24,7 @@
           <h5 class="card-title" style="font-style: italic">For training</h5>
           <h5 class="card-title">Choose one point</h5>
           <p class="card-text">
-            Which outlier is further to the center of the cluster?(Click the point you decide to select)
+            Which outlier is further to the center of the cluster?(Click on the point you decide to select)
           </p>
           <p class="card-text">
           <div class="chart-container" id="chartContainer" style="position: relative; height:400px; width:400px">
@@ -58,7 +58,7 @@
   // do something
 
 
-  const dataN = 0;
+  const dataN = 1;
 
 
   const ratioN = 0;
