--- a/html/test1-true-3.html
+++ b/html/test1-true-3.html
@@ -24,12 +24,12 @@
           <h5 class="card-title" style="font-style: italic">For training</h5>
           <h5 class="card-title">Result: Correct answer!</h5>
           <p class="card-text">
-            <img src="image/Task1-training1-result.png" class="img-fluid" style="border: 2px solid #555; width:60%; height: 60%;">
+            <img src="image/Task1-training3-result.png" class="img-fluid" style="border: 2px solid #555; width:60%; height: 60%;">
           </p>
           <p class="card-text" style="margin-top: 30px;">
 
           </p>
-          <a href="test1-training2.html" class="btn btn-primary">Try it again</a>
+          <a href="test1-notice.html" class="btn btn-primary">Start Test</a>
         </div>
         <div class="card-footer text-muted">
           Note:
