--- a/html/test2-true-3.html
+++ b/html/test2-true-3.html
@@ -22,10 +22,11 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title" style="font-style: italic">For training</h5>
-                    <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
+                    <h5 class="card-title">Result: Correct! </h5>
                     <p class="card-text">
                         The left scatterplot has 100 points, the right scatterplot has 80 points.
                     </p>
+                    <p class="card-text">
 
                     <div class="row">
                         <div class="col-6">
@@ -41,7 +42,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-training-3.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-notice.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -70,7 +71,7 @@
 
     const dataN = 1;
 
-    const ratioN = 0;
+    const ratioN = 1;
 
     // config
     const config = {
@@ -162,7 +163,6 @@
     let pointsNumber1 = dataTask2Training[1].datasets[0].data.length;
     let pointsNumber2 = dataTask2Training[dataN].datasets[0].data.length
     const compare = pointsNumber1 > pointsNumber2
-
 
 
 </script>
