--- a/html/test3-true-2.html
+++ b/html/test3-true-2.html
@@ -45,7 +45,7 @@
           </div>
           <p class="card-text" style="margin-top: 30px;">
           </p>
-          <a href="test3-notice.html" class="btn btn-primary">Start Test</a>
+          <a href="test3-training-3.html" class="btn btn-primary">Try it again</a>
         </div>
         <div class="card-footer text-muted">
           Note:
