--- a/html/test1-convince.html
+++ b/html/test1-convince.html
@@ -146,7 +146,7 @@
     count = count + 1;
     if (count == 51) {
       window.setTimeout(() => {
-        location.href = 'test1-pending.html';
+        location.href = 'test1-training3.html';
       }, 1000);
     }
     else{
