--- a/html/test2-false-2.html
+++ b/html/test2-false-2.html
@@ -41,7 +41,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-training-3.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-notice.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -70,7 +70,7 @@
 
     const dataN = 1;
 
-    const ratioN = 0;
+    const ratioN = 3;
 
     // config
     const config = {
