--- a/html/test2-false-4.html
+++ b/html/test2-false-4.html
@@ -22,11 +22,10 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title" style="font-style: italic">For training</h5>
-                    <h5 class="card-title">Result: Correct! </h5>
+                    <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
                     <p class="card-text">
                         The left scatterplot has 100 points, the right scatterplot has 120 points.
                     </p>
-                    <p class="card-text">
 
                     <div class="row">
                         <div class="col-6">
@@ -42,7 +41,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-training-2.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-pending.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -71,7 +70,7 @@
 
     const dataN = 2;
 
-    const ratioN = 3;
+    const ratioN = 1;
 
     // config
     const config = {
@@ -163,6 +162,8 @@
     let pointsNumber1 = dataTask2Training[1].datasets[0].data.length;
     let pointsNumber2 = dataTask2Training[dataN].datasets[0].data.length
     const compare = pointsNumber1 > pointsNumber2
+
+
 
 
 </script>
