--- a/html/test2-convince.html
+++ b/html/test2-convince.html
@@ -146,7 +146,7 @@
     count = count + 1;
     if (count == 151) {
       window.setTimeout(() => {
-        location.href = 'test2-pending.html';
+        location.href = 'test2-training-3.html';
       }, 1000);
     }
     else{
