--- a/html/test2-true-3.html
+++ b/html/test2-true-3.html
@@ -42,7 +42,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-notice.html" class="btn btn-primary">Start Test</a>
+                    <a href="test2-training-4.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
