--- a/html/test2-true-4.html
+++ b/html/test2-true-4.html
@@ -42,7 +42,7 @@
                     </div>
                     <p class="card-text" style="margin-top: 30px;">
                     </p>
-                    <a href="test2-training-2.html" class="btn btn-primary">Try it again</a>
+                    <a href="test2-pending.html" class="btn btn-primary">Start Test</a>
                 </div>
                 <div class="card-footer text-muted">
                     Note:
@@ -71,7 +71,7 @@
 
     const dataN = 2;
 
-    const ratioN = 3;
+    const ratioN = 1;
 
     // config
     const config = {
