--- a/html/test3-false-3.html
+++ b/html/test3-false-3.html
@@ -45,7 +45,7 @@
           <p class="card-text" style="margin-top: 30px;">
 
           </p>
-          <a href="test3-notice.html" class="btn btn-primary">Start Test</a>
+          <a href="test3-training-4.html" class="btn btn-primary">Try it again</a>
         </div>
         <div class="card-footer text-muted">
           Note:
@@ -74,7 +74,7 @@
 
   const dataN = 3;
 
-  const ratioN = 0;
+  const ratioN = 2;
 
   // config
   const config = {
