--- a/html/test3-false-4.html
+++ b/html/test3-false-4.html
@@ -22,14 +22,13 @@
         </div>
         <div class="card-body">
           <h5 class="card-title" style="font-style: italic">For training</h5>
-          <h5 class="card-title">Result: Correct answer!</h5>
+          <h5 class="card-title">Result: Unfortunately, it is an incorrect answer.</h5>
           <p class="card-text">
-            The correlation of the left scatterplot is 0.749, the correlation of the right scatterplot is 0.83.
+            The correlation of the left scatterplot is -0.752, the correlation of the right scatterplot is 0.501.
           </p>
           <p class="card-text">
-            Compare two absolute values, the right one is stronger.
+            Compare two absolute values, the left one is stronger.
           </p>
-          <p class="card-text">
 
           <div class="row">
             <div class="col-6">
@@ -44,8 +43,9 @@
             </div>
           </div>
           <p class="card-text" style="margin-top: 30px;">
+
           </p>
-          <a href="test3-training-4.html" class="btn btn-primary">Try it again</a>
+          <a href="test3-pending.html" class="btn btn-primary">Start Test</a>
         </div>
         <div class="card-footer text-muted">
           Note:
@@ -72,14 +72,14 @@
 
   let start = Date.now();
 
-  const dataN = 3;
+  const dataN = 1;
 
   const ratioN = 2;
 
   // config
   const config = {
     type: 'scatter',
-    data: dataTask3Training[2],
+    data: dataTask3Training[0],
     options: {
       scales: {
         x: {
