--- a/html/test3-convince.html
+++ b/html/test3-convince.html
@@ -146,7 +146,7 @@
     count = count + 1;
     if (count == 251) {
       window.setTimeout(() => {
-        location.href = 'test3-pending.html';
+        location.href = 'test3-training-3.html';
       }, 1000);
     }
     else{
